feat: 사용자의 관심 상품에 사용되는 메소드에 safetyScore 반영